# dotfiles

./: .gitignore  .tmux.conf  CLAUDE.md
.config/: ghostty.config  starship.toml
.config/nvim/: init.lua  lazy-lock.json
.config/nvim/after/plugin/: lsp.lua  telescope.lua  treesitter.lua
.config/nvim/lua/config/: comment.lua  init.lua  lazy.lua  remap.lua  set.lua  statusline.lua
.config/nvim/lua/ole/: colors.lua  init.lua  packer.lua  remap.lua  set.lua  statusline.lua
.config/nvim/lua/plugins/: _copilot._lua  aura.lua  autoclose.lua  autopairs.lua  comment.lua  fff.lua  github-copilot.lua  lsp.lua  markview.lua  nvim-cmp.lua  nvim-ts-autotag.lua  oil.lua  telescope.lua  theme.lua  tiny-inline-diagnostics.lua  treesitter-reason.lua  treesitter-rstml.lua  treesitter.lua  vim-dadbod.lua
.config/nvim/plugin/: packer_compiled.lua
ableton/: Everforest Alby - alby.ask  Everforest Light Alby - alby.ask  Everforest Soft Dark.ask  Everforest Soft Light.ask
chrome/: README.md
chrome/everforest-dark/: manifest.json
chrome/everforest-light/: manifest.json
gnome-terminal/: README.md  everforest-dark.dconf  everforest-light.dconf
theme-cli/: Cargo.toml  README.md  config.toml
theme-cli/src/: config.rs  main.rs
theme-cli/src/surfaces/: apps.rs  chrome.rs  ghostty.rs  gnome_terminal.rs  mod.rs  nvim.rs  system.rs  tmux.rs
tms/: config.toml
