[package]
name = "theme-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "theme"
path = "src/main.rs"

[dependencies]
clap   = { version = "4", features = ["derive"] }
serde  = { version = "1", features = ["derive"] }
toml   = "0.8"
anyhow = "1"
glob   = "0.3"
dirs   = "5"

[profile.release]
strip = true
lto = true
